Changed scroll speed. Removed .slide class to fix alignment issues. Started some basic layout things within each section.

--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
 }
 
 
+
+
 /* Logo */
 
 #nav-logo {
@@ -69,7 +71,7 @@ body {
 /* Contact icons */
 
 #contact {
-  margin-top: 25px;
+  margin-top: 28px;
 }
 
 .icon {
@@ -155,11 +157,18 @@ body {
 
 h1 {
   font-family: 'La Belle Aurore';
+  color: #FC5D38;
+  font-size: 50px;
+}
+
+small {
+  color: #FFFFFF!important;
 }
 
 
 #fullpage .section {
   padding-top:100px;
+  position: relative;
 }
 
 
@@ -170,6 +179,10 @@ h1 {
   border-radius: 100%;
   background: rgb(220,220,220);
   opacity: 0.4;
+  margin: 0 auto;
+  position: absolute;
+  left: 50%;
+  margin-top: 150px;
 }
 
 .next-page a {
@@ -208,10 +221,15 @@ h1 {
   background-size: cover;
 }
 
+#main-text-s01 {
+  width: 400px;
+  margin: 0 auto;
+  margin-top: -300px;
+}
 
-
-
-
+#next-arrow-01 {
+  margin-top: 430px;
+}
 
 
 
@@ -224,6 +242,12 @@ h1 {
   background-color: rgb(240,240,240);
 }
 
+#main-text-s02 {
+  width: 400px;
+  margin: 0 auto;
+  margin-top: -100px;
+}
+
 .portfolio-link {
   display: block;
   width: 60px;
@@ -231,6 +255,9 @@ h1 {
   border-radius: 100%;
   background: #FC5D38;
   opacity: 0.9;
+  position: absolute;
+  left: 95%;
+  margin-top: -125px;
 }
 
 .portfolio-link a {
@@ -255,16 +282,60 @@ h1 {
 
 
 
+#next-arrow-02 {
+  margin-top: 245px;
+}
+
+
+
+
+
 /* Section 3: #chocolate */
+
+#section3 {
+  background-color: rgb(240,240,240);
+}
+
+
+#main-text-s03 {
+  width: 400px;
+  margin: 0 auto;
+  margin-top: -100px;
+}
+
+
+
+#next-arrow-03 {
+  margin-top: 280px;
+}
 
 
 
 
 /* Section 4: #about */
 
+#section4 {
+  background-color: rgb(240,240,240);
+}
 
 
-/* Footer */
+#main-text-s04 {
+  width: 400px;
+  margin: 0 auto;
+  margin-top: -100px;
+}
+
+
+
+
+
+
+
+
+
+/* ---Footer--- */
+
+/* General footer things */
 
 #footer {
   position: absolute;
@@ -274,6 +345,9 @@ h1 {
   height: 210px;
   background-color: #FC5D38;
 }
+
+
+/* Top row: nav */
 
 #footer-nav {
   color: #FCF9F0;
@@ -292,6 +366,10 @@ h1 {
   text-decoration: none;
 }
 
+
+/* Middle row: logo / contact */
+
+
 #footer-contact {
   margin-top: 6px;
 }
@@ -305,6 +383,9 @@ h1 {
   width: 30px;
   margin: 2px;
 }
+
+
+/* Bottom row: copyright */
 
 #footer-bottom-row {
   color: #FCF9F0;
